--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @use 'hero';
+@use 'components/infosbar';
+@use 'components/buttons';
 
 
 *{
@@ -6,6 +8,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto';
+    list-style: none;
+    text-decoration: none;
 }
 
 .container{
