--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,9 +1,33 @@
+@use 'var';
+
 .event{
     padding: 80px 0;
-    background-image: linear-gradient(175deg, #1B6CA7 , #442BDB);
+
+    &--front-end{
+        background-image: linear-gradient(var.$blue1 , var.$blue2);
+    }
+    
+    &--ux-ui{
+        background-image: linear-gradient(var.$blue2 , var.$pink);
+    }
+
+    &--data-science{
+        background-image: linear-gradient(var.$pink , var.$yellow);
+    }
+
+    &--back-end{
+        background-image: linear-gradient(var.$yellow , var.$pink);
+    }
+
+    &--image-left{
+        .container{
+            flex-direction: row-reverse;
+        }
+    }
 
     .container{
         display: flex;
+        gap: 40px
     }
 
     &__image {
