--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use 'var';
+
 .hero{
     padding-top: 64px;
     padding-bottom: 100px;
@@ -17,7 +19,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #000;
+        background-color: var.$secondaryTextColor;
         opacity: 0.7;
     }
 
