--- a/src/styles/components/_infosbar.scss
+++ b/src/styles/components/_infosbar.scss
@@ -1,8 +1,10 @@
+@use '../var';
+
 .infos-bar{
     display: flex;
     justify-content: space-between;
     padding: 16px 24px;
-    background-color: #fff;
+    background-color: var.$textColor;
 
     &__list{
         display: flex;
@@ -10,10 +12,11 @@
 
         &__item{
             font-size: 14px;
-            color: black;
+            color: var.$secondaryTextColor;
   
 
             b{
+                color: var.$secondaryTextColor;
                 font-size: 18px;
                 display: block;
             }
