--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @use 'components/infosbar';
 @use 'components/buttons';
 @use 'event';
+@use 'var';
 
 
 *{
@@ -11,6 +12,7 @@
     font-family: 'Roboto';
     list-style: none;
     text-decoration: none;
+    color: var.$textColor;
 }
 
 .container{
